-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
None
-
3
-
9223372036854775807
With the reintroduction of lu_ref to the native Linux client I turned on this functionality and started to test it. In my testing I saw the following errors:
[ 2885.946815] Call Trace:
[ 2885.951240] dump_stack+0x68/0x9b
[ 2885.956523] ___might_sleep+0x205/0x260
[ 2885.962245] lu_ref_add+0x25/0x40 [obdclass]
[ 2885.968442] vvp_pgcache_current+0x101/0x1a0 [lustre]
[ 2885.975370] seq_read+0x1ab/0x3c0
and
[ 7042.102529] dump_stack+0x68/0x9b
[ 7042.107328] ___might_sleep+0x205/0x260
[ 7042.112647] lu_ref_add+0x25/0x40 [obdclass]
[ 7042.118385] mdc_lock_upcall+0x154/0x4d0 [mdc]
[ 7042.124275] mdc_enqueue_send+0x508/0x580 [mdc]
[ 7042.130225] ? mdc_lock_lvb_update+0x280/0x280 [mdc]
Its an easy fix that is missed since lu_ref is never tested on the OpenSFS branch.